# lua-z3

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SETUP.md  build_all.bat  deploy.bat  lua-z3-0.1.0-1.rockspec  lua-z3-scm-1.rockspec  pack_all.bat  run_tests.lua  vcpkg-configuration.json  vcpkg.json
.github/workflows/: publish.yml
Source/z3/: CMakeLists.txt  LuaContext.cpp  LuaExpr.cpp  LuaModel.cpp  LuaSolver.cpp  LuaSort.cpp  LuaZ3.cpp
Source/z3/Include/z3/: Lua.hpp  LuaContext.hpp  LuaExpr.hpp  LuaModel.hpp  LuaSolver.hpp  LuaSort.hpp
cmake/: vcpkg_bootstrap.cmake
ports/lua-z3/: portfile.cmake  vcpkg.json
rock/: z3.lua
tests/: test_z3.lua
